openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr-summary-worker-service
  labels:
    app: ocr-summary-worker
spec:
  ports:
    - name: metrics
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: ocr-summary-worker
  type: ClusterIP
